[package]
name = "psqr"
version = "0.1.1"
edition = "2021"
authors = ["divinerapier"]
description = "The P-Square Algorithm for Dynamic Calculation of Percentiles and Histograms without Storing Observations"
license = "Apache-2.0"
keywords = ["Algorithm"]
repository = "https://github.com/divinerapier/psqr"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
